--- a/lib/mololine_web/templates/page/index.html.heex
+++ b/lib/mololine_web/templates/page/index.html.heex
@@ -22,19 +22,7 @@
     <h2>Help</h2>
     <ul>
       <li>
-        <a href="https://elixirforum.com/c/phoenix-forum">Forum</a>
-      </li>
-      <li>
-        <a href="https://web.libera.chat/#elixir">#elixir on Libera Chat (IRC)</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">Twitter @elixirphoenix</a>
-      </li>
-      <li>
-        <a href="https://elixir-slackin.herokuapp.com/">Elixir on Slack</a>
-      </li>
-      <li>
-        <a href="https://discord.gg/elixir">Elixir on Discord</a>
+        <a href="http://localhost:4000/parcels">Parcels</a>
       </li>
     </ul>
   </article>
