--- a/lib/mololine_web/templates/parcel/show.html.heex
+++ b/lib/mololine_web/templates/parcel/show.html.heex
@@ -3,19 +3,24 @@
 <ul>
 
   <li>
-    <strong>Name:</strong>
-    <%= @parcel.name %>
+    <strong> Recipient Name:</strong>
+    <%= @parcel.recipient_name %>
   </li>
 
   <li>
-    <strong>From:</strong>
-    <%= @parcel.from %>
+    <strong>Recipient Phone:</strong>
+    <%= @parcel.recipient_phone %>
   </li>
 
   <li>
-    <strong>To:</strong>
-    <%= @parcel.to %>
+    <strong>Weight in Grams :</strong>
+    <%= @parcel.weight %>
   </li>
+  <li>
+      <strong>PIN :</strong>
+      <%= @parcel.pin %>
+    </li>
+
 
 </ul>
 
