--- a/lib/mololine_web/templates/seatplan/form.html.heex
+++ b/lib/mololine_web/templates/seatplan/form.html.heex
@@ -8,6 +8,27 @@
   <%= label f, :name %>
   <%= text_input f, :name %>
   <%= error_tag f, :name %>
+  <% columns = ["A","B","C","D","E"]%>
+  <% rows = ["1","2","3","4","5","6","7","8","9"] %>
+  <br>
+  <%= label f, "Seat Plan" %>
+  <p> please select the required seats </p>
+  <%= for row <- rows do %>
+  <%= for column <- columns do %>
+
+      <tr>
+        <td>
+        <%= row %><%= column %>
+           <input type="checkbox" name= "seatplan[seats][]" id="" value={row<>column}/>
+
+
+        </td>
+      </tr>
+
+  <% end %>
+   <br>
+  <% end %>
+
 
   <div>
     <%= submit "Save" %>
