--- a/lib/mololine_web/templates/seatplan/show.html.heex
+++ b/lib/mololine_web/templates/seatplan/show.html.heex
@@ -20,17 +20,17 @@
        <%=if Enum.member?(seats,row<>column)   do %>
            <tr>
              <td>
-                <button style= "background-color:green"><%= row %><%= column %></button>
+                <button style= "background-color:green; width: 50px;height: 50px"><%= row %><%= column %></button>
              </td>
            </tr>
 
           <% else %>
           <tr>
                        <td>
-                          <button style= "background-color:blue"><%= row %><%= column %></button>
+                          <button style= "background-color:white ; width: 50px;height: 50px"><%= row %><%= column %></button>
 
                        </td>
-                     </tr>
+          </tr>
 
 
        <% end %>
