--- a/lib/mololine_web/templates/travel_notice/show.html.heex
+++ b/lib/mololine_web/templates/travel_notice/show.html.heex
@@ -10,12 +10,17 @@
     <strong>To:</strong>
     <%= @travel_notice.to %>
   </li>
-
-
-
   <li>
     <strong>Price:</strong>
     <%= @travel_notice.price %>
+  </li>
+  <li>
+    <strong>Date:</strong>
+    <%= @travel_notice.date %>
+  </li>
+   <li>
+    <strong>Departure Time:</strong>
+    <%= @travel_notice.time %>
   </li>
 
 </ul>
