--- a/lib/mololine_web/templates/travel_notice/index.html.heex
+++ b/lib/mololine_web/templates/travel_notice/index.html.heex
@@ -6,6 +6,8 @@
       <th>From</th>
       <th>To</th>
       <th>Price</th>
+      <th>Date</th>
+      <th>Departure Time</th>
 
       <th></th>
     </tr>
@@ -16,6 +18,8 @@
       <td><%= travel_notice.from %></td>
       <td><%= travel_notice.to %></td>
       <td><%= travel_notice.price %></td>
+      <td><%= travel_notice.date %></td>
+      <td><%= travel_notice.time %></td>
 
       <td>
         <span><%= link "Show", to: Routes.travel_notice_path(@conn, :show, travel_notice) %></span>
