ADD -Vehicles now Must have a driver who is a user

--- a/lib/mololine_web/templates/page/index.html.heex
+++ b/lib/mololine_web/templates/page/index.html.heex
@@ -19,11 +19,14 @@
     </ul>
   </article>
   <article class="column">
-    <h2>Help</h2>
+    <h2>Resources</h2>
     <ul>
-      <li>
-        <a href="http://localhost:4000/parcels">Parcels</a>
-      </li>
+      <li><a href="http://localhost:4000/parcels">Parcels</a></li>
+      <li><a href="http://localhost:4000/seatplans">Seatplans</a></li>
+      <li><a href="http://localhost:4000/vehicles">vehicles</a></li>
+      <li><a href="http://localhost:4000/travelnotices">Travel Notices</a></li>
+      <li><a href="http://localhost:4000/towns">Towns</a></li>
+      <li><a href="http://localhost:4000/bookings">Bookings</a></li>
     </ul>
   </article>
 </section>
