--- a/lib/mololine_web/templates/vehicle/show.html.heex
+++ b/lib/mololine_web/templates/vehicle/show.html.heex
@@ -5,6 +5,9 @@
   <li>
     <strong>Plate:</strong>
     <%= @vehicle.plate %>
+
+    <strong>Driver's Email:</strong>
+        <%= @vehicle.driveremail %>
   </li>
    <li> <strong>Seat Plan:</strong>
           <% seats = @vehicle.seatplan.seats %>
