--- a/lib/mololine_web/templates/travel_notice/show.html.heex
+++ b/lib/mololine_web/templates/travel_notice/show.html.heex
@@ -1,6 +1,12 @@
 <h1>Show Travel notice</h1>
 
 <ul>
+
+   <li>
+    <strong>Vehicle plate :</strong>
+    <%= @travel_notice.plate %>
+  </li>
+
   <li>
     <strong>From:</strong>
     <%= @travel_notice.from %>
