--- a/lib/mololine_web/templates/booking/form.html.heex
+++ b/lib/mololine_web/templates/booking/form.html.heex
@@ -8,9 +8,25 @@
    <%= label f, "Travel Notice Id"%>
    <%= select f, :travelnotice_id, [@travelnotice_id],required: true %>
 
-  <%= label f, :seat %>
-  <%= text_input f, :seat %>
-  <%= error_tag f, :seat %>
+  <% columns = ["A","B","C","D","E"]%>
+    <% rows = ["1","2","3","4","5","6","7","8","9"] %>
+    <br>
+    <%= label f, "Seats" %>
+    <p> please select the required seats </p>
+    <%= for row <- rows do %>
+    <%= for column <- columns do %>
+
+        <tr>
+          <td>
+          <%= row %><%= column %>
+             <input type="checkbox" name= "booking[seat][]" id="" value={row<>column}/>
+
+          </td>
+        </tr>
+
+    <% end %>
+     <br>
+    <% end %>
 
 
   <div>
