ADD -  Made booking have booking_id and checked_in. - made vehicles editable

--- a/lib/mololine_web/templates/booking/show.html.heex
+++ b/lib/mololine_web/templates/booking/show.html.heex
@@ -7,6 +7,16 @@
     <%= @booking.seat %>
   </li>
 
+  <li>
+      <strong>Checked in :</strong>
+      <%= @booking.checked_in %>
+  </li>
+
+  <li>
+        <strong> Booking ID :</strong>
+        <%= @booking.booking_id %>
+    </li>
+
 </ul>
 
 <span><%= link "Edit", to: Routes.booking_path(@conn, :edit, @booking) %></span> |
