--- a/lib/mololine_web/templates/booking/index.html.heex
+++ b/lib/mololine_web/templates/booking/index.html.heex
@@ -4,6 +4,8 @@
   <thead>
     <tr>
       <th>Seat</th>
+      <th>Checked In</th>
+      <th>Booking Id</th>
 
       <th></th>
     </tr>
@@ -12,6 +14,8 @@
 <%= for booking <- @bookings do %>
     <tr>
       <td><%= booking.seat %></td>
+      <td><%= booking.checked_in %></td>
+      <td><%= booking.booking_id %></td>
 
       <td>
         <span><%= link "Show", to: Routes.booking_path(@conn, :show, booking) %></span>
