ADD -  Bookings now have a total_price of all total seats booked

--- a/lib/mololine_web/live/booking_live.html.heex
+++ b/lib/mololine_web/live/booking_live.html.heex
@@ -85,5 +85,5 @@
            <% end %>
            <br>
         <% end %>
-
+<li> <strong>Total Price: <%= length(selectedseats) * @travelnotice.price%> Ksh </strong></li>
 <button phx-click= "book"> Book </button>
