--- a/lib/mololine_web/templates/vehicle/show.html.heex
+++ b/lib/mololine_web/templates/vehicle/show.html.heex
@@ -5,8 +5,8 @@
   <li>
     <strong>Plate:</strong>
     <%= @vehicle.plate %>
-
-    <strong>Driver's Email:</strong>
+  </li>
+  <li><strong>Driver's Email:</strong>
         <%= @vehicle.driveremail %>
   </li>
    <li> <strong>Seat Plan:</strong>
