--- a/lib/mololine_web/templates/booking/index.html.heex
+++ b/lib/mololine_web/templates/booking/index.html.heex
@@ -9,7 +9,7 @@
       <th>Date</th>
       <th>Time</th>
       <th>Seat</th>
-      <th>Price</th>
+      <th>Total Price</th>
       <th>Checked In</th>
       <th>Booking Id</th>
 
@@ -25,13 +25,13 @@
       <td><%= booking.travelnotice.date %></td>
       <td><%= booking.travelnotice.time %></td>
       <td><%= booking.seat %></td>
-     <td><%= booking.travelnotice.price %></td>
+     <td><%= booking.total_price %></td>
       <td><%= booking.checked_in %></td>
       <td><%= booking.booking_id %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.booking_path(@conn, :show, booking) %></span>
-        <span><%= link "Edit", to: Routes.booking_path(@conn, :edit, booking) %></span>
+        <span><% link "Show", to: Routes.booking_path(@conn, :show, booking) %></span>
+        <span><% link "Edit", to: Routes.booking_path(@conn, :edit, booking) %></span>
         <span><%= link "Delete", to: Routes.booking_path(@conn, :delete, booking), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
@@ -39,4 +39,3 @@
   </tbody>
 </table>
 
-<span><%= link "New Booking", to: Routes.booking_path(@conn, :new) %></span>
