ADD -  Fix issue in making Parcel Delivery booking

--- a/lib/mololine_web/templates/parcel_delivery_booking/form.html.heex
+++ b/lib/mololine_web/templates/parcel_delivery_booking/form.html.heex
@@ -5,9 +5,9 @@
     </div>
   <% end %>
 
-  <%= label f, :parcel_id %>
-  <%= text_input f, :parcel_id %>
-  <%= error_tag f, :parcel_id %>
+  <%= label f, :parcel_unique_id %>
+  <%= number_input f, :parcel_unique_id %>
+  <%= error_tag f, :parcel_unique_id %>
 
   <%= label f, :pickuppoint %>
   <%= text_input f, :pickuppoint %>
