--- a/lib/mololine_web/templates/parcel_delivery_booking/show.html.heex
+++ b/lib/mololine_web/templates/parcel_delivery_booking/show.html.heex
@@ -4,7 +4,7 @@
 
   <li>
     <strong>Parcel:</strong>
-    <%= @parcel_delivery_booking.parcel_id %>
+    <%= @parcel_delivery_booking.parcel_unique_id %>
   </li>
 
   <li>
