--- a/lib/mololine_web/live/parcel_delivery_booking_live.html.heex
+++ b/lib/mololine_web/live/parcel_delivery_booking_live.html.heex
@@ -1,31 +1,18 @@
-<h1> Seat Booking Live </h1>
+<h1>Parcel Delivery Booking Live</h1>
  <label> Travel Notice </label>
  <ul>
+ <strong>
     <li>
     ID <%= @travelnotice.id%>
     </li>
     <li>
         Drivers Email :<%= @travelnotice.vehicle.driveremail %>
-        </li>
+    </li>
+    <li>
+        Vehicle Plate: <%= @travelnotice.vehicle.plate%>
+    </li>
+     </strong>
  </ul>
-<label> Info </label>
-
- <li>
-         <button style= "background-color:gray; width: 50px;height: 50px"></button>Booked
- </li>
- <li>
-         <button style= "background-color:skyblue; width: 50px;height: 50px"> </button>Selected
- </li>
-
-  <li>
-         <button style= "background-color:lightgreen; width: 50px;height: 50px"> </button>Bookable
- </li>
-
- <li>
-          <button style= "background-color:white; width: 50px;height: 50px"> </button> Non Existing
-  </li>
-
-
 
   <%booked_seat_list = @bookings%>
 
