--- a/lib/mololine_web/templates/travel_notice/index.html.heex
+++ b/lib/mololine_web/templates/travel_notice/index.html.heex
@@ -25,7 +25,8 @@
 
       <td>
         <span><%= link("Book live", to: URI.parse("http://localhost:4000/bookinglive/#{travel_notice.id}")) %></span>
-        <span><%= link "Show", to: Routes.travel_notice_path(@conn, :show, travel_notice) %></span>
+        <span><%= link("Book Parcel Delivery live", to: URI.parse("http://localhost:4000/parceldeliverybookinglive/#{travel_notice.id}")) %></span>
+
         <span><%= link "Edit", to: Routes.travel_notice_path(@conn, :edit, travel_notice) %></span>
         <span><%= link "Delete", to: Routes.travel_notice_path(@conn, :delete, travel_notice), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
