--- a/lib/mololine_web/templates/page/customer_page.html.heex
+++ b/lib/mololine_web/templates/page/customer_page.html.heex
@@ -1,2 +1,19 @@
 
 <h1>Customer Page</h1>
+<section class="row">
+  <article class="column">
+    <h2>Resources</h2>
+    <ul>
+    <% @conn.host%>
+    <% @conn.port%>
+    <% host = @conn.host%>
+    <% port = @conn.port%>
+    <% base_url = "http://#{host}:#{port}"%>
+    <label> <%=base_url%></label>
+      <li><a href= {base_url <> "/parcels"}>Parcels</a></li>
+      <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
+      <li><a href={base_url <> "/bookings"}>Bookings</a></li>
+      <li><a href={base_url <> "/parceldeliverybooking"}>Parcel Delivery Bookings</a></li>
+    </ul>
+  </article>
+</section>
