ADD: Hr live - to neable hr to change role of users.
FIX: made travel notice only show your travel notices and if you have no vehicle get error

--- a/lib/mololine_web/templates/page/index.html.heex
+++ b/lib/mololine_web/templates/page/index.html.heex
@@ -20,6 +20,7 @@
       <li><a href={base_url <> "/towns"}>Towns</a></li>
       <li><a href={base_url <> "/bookings"}>Bookings</a></li>
       <li><a href={base_url <> "/parceldeliverybooking"}>Parcel Delivery Bookings</a></li>
+      <li><a href={base_url <> "/hrlive"}>hr</a></li>
     </ul>
   </article>
 </section>
