ADD: Made travel notices for drivers

--- a/lib/mololine_web/templates/page/admin.html.heex
+++ b/lib/mololine_web/templates/page/admin.html.heex
@@ -13,6 +13,7 @@
       <li><a href={base_url <> "/seatplans"}>Seatplans</a></li>
       <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
       <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
+      <li><a href={base_url <> "/travelnoticesfordriver"}>Travel Notices For Drivers</a></li>
       <li><a href={base_url <> "/towns"}>Towns</a></li>
       <li><a href={base_url <> "/bookings"}>Bookings</a></li>
       <li><a href={base_url <> "/parceldeliverybooking"}>Parcel Delivery Bookings</a></li>
