--- a/lib/mololine_web/templates/page/driver.html.heex
+++ b/lib/mololine_web/templates/page/driver.html.heex
@@ -8,7 +8,7 @@
     <% port = @conn.port%>
     <% base_url = "http://#{host}:#{port}"%>
     <label> <% base_url%></label>
-      <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
+      <li><a href={base_url <> "/travelnoticesfordriver"}>Travel Notices</a></li>
     </ul>
   </article>
 </section>
