ADD: Made proper conductor liveview that can -checkin seat booking, -checkin parcel and checkout parcel in road - #### chceckin and checkout of parcel in office is unimplemented.

--- a/lib/mololine_web/templates/travel_notice/index.html.heex
+++ b/lib/mololine_web/templates/travel_notice/index.html.heex
@@ -1,4 +1,4 @@
-<h1>Listing Travelnotices</h1>
+<h1>Listing Travelnotices For Customers </h1>
 
 <table>
   <thead>
@@ -36,5 +36,3 @@
 <% end %>
   </tbody>
 </table>
-
-<span><%= link "New Travel notice", to: Routes.travel_notice_path(@conn, :new) %></span>
