--- a/lib/mololine_web/live/conductor_live.html.heex
+++ b/lib/mololine_web/live/conductor_live.html.heex
@@ -1,69 +1,158 @@
+<h1>Conductor Live Page</h1>
+<main class="container">
+    <p class="alert alert-info" role="alert"
+       phx-click="lv:clear-flash"
+       phx-value-key="info"><%= live_flash(@flash, :info) %></p>
 
+    <p class="alert alert-danger" role="alert"
+       phx-click="lv:clear-flash"
+       phx-value-key="error"><%= live_flash(@flash, :error) %></p>
+</main>
 <section class="row">
-  <article class="column">
-    <h1>Booked Person</h1>
-    <ul>
-<%=for booking <- @bookings do%>
-<%=if booking.checked_in == false do%>
-<label> <%=booking.user.firstname%><%=booking.total_price %></label>
-<%end%>
- <%end%>
+    <article class="column">
+        <h1>Booked People</h1>
+        <ul>
+            <%=for booking <- @bookings do%>
+            <%=if booking.checked_in == false do%>
+            <label> <%=booking.user.firstname%><%=booking.total_price %></label>
+            <%end%>
+            <%end%>
 
 
-    </ul>
-  </article>
+        </ul>
+        <form phx-submit="submit_booking">
+            <label> Enter Booking Id</label>
+            <input type="number" name="booking_id" required>
+            <button type="submit"> Check in</button>
+        </form>
+    </article>
 
     <article class="column">
-      <h1>Checked in Person</h1>
-      <ul>
+        <h1>Checked in People</h1>
+        <ul>
 
- <%=for booking <- @bookings do%>
- <%=if booking.checked_in == true do%>
- <label> <%=booking.user.firstname%> <%=booking.user.lastname%> Ksh <%=booking.total_price %></label>
- <%end%>
-  <%end%>
+            <%=for booking <- @bookings do%>
+            <%=if booking.checked_in == true do%>
+            <label> <%=booking.user.firstname%> <%=booking.user.lastname%> Ksh <%=booking.total_price %></label>
+            <%end%>
+            <%end%>
 
-      </ul>
+        </ul>
+
     </article>
 
 </section>
-<form phx-submit="submit_booking" >
-<label> Enter Booking Id</label>
-    <input type ="number" name ="booking_id" required>
-    <button type="submit" > Check in</button>
-    </form>
 
 
 <section class="row">
-  <article class="column">
-    <h1>Booked Parcel</h1>
-    <ul>
-<%=for parcel <- @parcels do%>
-<%=if parcel.checked_in == false do%>
-<label> <%=parcel.parcel_unique_id%></label>
-<%end%>
- <%end%>
+    <article class="column">
+        <h2>Booked Parcels Expected On Road</h2>
+        <ul>
+            <%=for parceli <- @parcels do%>
+            <%=if parceli.checked_in == false and parceli.pickuppoint == "Custom Location" do%>
+            <label>ID: <%=parceli.parcel.id%> Recipient: <%=parceli.parcel.recipient_name%></label>
+            <%end%>
+            <%end%>
 
 
-    </ul>
-  </article>
+        </ul>
+        <form phx-submit="submit_parcel_road_booking">
+            <label> Enter Booking Id</label>
+            <input type="number" name="booking_id" required>
+            <button type="submit"> Check in</button>
+        </form>
+    </article>
 
     <article class="column">
-      <h1>Checked in Parcel</h1>
-      <ul>
+        <h2>Booked Parcels Expected In Office</h2>
+        <ul>
+            <%=for parceli <- @parcels do%>
+            <%=if parceli.checked_in == false and parceli.pickuppoint != "Custom Location" do%>
+            <label>ID: <%=parceli.parcel.id%> Recipient: <%=parceli.parcel.recipient_name%></label>
+            <%end%>
+            <%end%>
 
- <%=for parcel <- @parcels do%>
- <%=if parcel.checked_in == true do%>
- <label> <%=parcel.parcel_unique_id%> </label>
- <%end%>
-  <%end%>
 
-      </ul>
+        </ul>
+        <form phx-submit="submit_parcel_office_booking">
+            <label> Enter Booking Id</label>
+            <input type="number" name="booking_id" required>
+            <button type="submit"> Check in</button>
+        </form>
+    </article>
+
+    <article class="column">
+        <h2>Checked in Parcels</h2>
+        <ul>
+            <%=for parceli <- @parcels do%>
+            <%=if parceli.checked_in == true do%>
+            <label>ID: <%=parceli.parcel.id%> Recipient: <%=parceli.parcel.recipient_name%></label>
+            <%end%>
+            <%end%>
+
+        </ul>
+
     </article>
 
 </section>
-<form phx-submit="submit" >
-<label> Enter Booking Id</label>
-    <input type ="number" name ="booking_id" required>
-    <button type="submit" > Check in</button>
-    </form>
+
+<section class="row">
+    <article class="column">
+        <h2>Booked Parcels Checked Out On Road</h2>
+        <ul>
+            <%=for parceli <- @parcels do%>
+            <%=if parceli.checked_out == false and parceli.checked_in == true and parceli. droppoint == "Custom
+            Location" do%>
+            <label>ID: <%=parceli.parcel.id%> Recipient: <%=parceli.parcel.recipient_name%></label>
+            <%end%>
+            <%end%>
+
+
+        </ul>
+        <form phx-submit="submit_road_parcel_checkout">
+
+            <label> Enter Parcel Id</label>
+            <input type="number" name="parcel_id" required>
+            <label> Enter Parcel Pin</label>
+            <input type="text" name="pin" required>
+            <button type="submit"> Check out</button>
+        </form>
+    </article>
+
+    <article class="column">
+        <h2>Booked Parcels To Be Checked Out In Office</h2>
+        <ul>
+            <%=for parceli <- @parcels do%>
+            <%=if parceli.checked_out == false and parceli.checked_in == true and parceli. droppoint != "Custom
+            Location" do%>
+            <label>ID: <%=parceli.parcel.id%> Recipient: <%=parceli.parcel.recipient_name%> </label>
+            <%end%>
+            <%end%>
+
+
+        </ul>
+        <form phx-submit="submit_office_parcel_checkout">
+
+            <label> Enter Parcel Id</label>
+            <input type="number" name="parcel_id" required>
+            <label> Enter Parcel Pin</label>
+            <input type="text" name="pin" required>
+            <button type="submit"> Check out</button>
+        </form>
+    </article>
+
+    <article class="column">
+        <h2>Checked Out Parcels</h2>
+        <ul>
+
+            <%=for parceli <- @parcels do%>
+            <%=if parceli.checked_out == true and parceli.checked_in == true do%>
+            <label>ID: <%=parceli.parcel.id%> Recipient: <%=parceli.parcel.recipient_name%></label>
+            <%end%>
+            <%end%>
+
+        </ul>
+
+    </article>
+
+</section>
