--- a/lib/mololine_web/templates/page/accountant.html.heex
+++ b/lib/mololine_web/templates/page/accountant.html.heex
@@ -9,7 +9,7 @@
     <% port = @conn.port%>
     <% base_url = "http://#{host}:#{port}"%>
     <label> <% base_url%></label>
-
+    <li><a href={base_url <> "/items"}> Items stored in inventory -- for accountants</a></li>
     </ul>
   </article>
 </section>
