--- a/lib/mololine_web/templates/page/admin.html.heex
+++ b/lib/mololine_web/templates/page/admin.html.heex
@@ -14,6 +14,7 @@
       <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
       <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
       <li><a href={base_url <> "/travelnoticesfordriver"}>Travel Notices For Drivers</a></li>
+      <li><a href={base_url <> "/items"}> Items stored in inventory -- for accountants</a></li>
       <li><a href={base_url <> "/towns"}>Towns</a></li>
       <li><a href={base_url <> "/bookings"}>Bookings</a></li>
       <li><a href={base_url <> "/parceldeliverybooking"}>Parcel Delivery Bookings</a></li>
