--- a/lib/mololine_web/templates/page/admin.html.heex
+++ b/lib/mololine_web/templates/page/admin.html.heex
@@ -9,16 +9,21 @@
     <% port = @conn.port%>
     <% base_url = "http://#{host}:#{port}"%>
     <label> <%=base_url%></label>
-      <li><a href= {base_url <> "/parcels"}>Parcels</a></li>
-      <li><a href={base_url <> "/seatplans"}>Seatplans</a></li>
-      <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
-      <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
+      <label>Driver/Conductor Page</label>
       <li><a href={base_url <> "/travelnoticesfordriver"}>Travel Notices For Drivers</a></li>
-      <li><a href={base_url <> "/items"}> Items stored in inventory -- for accountants</a></li>
-      <li><a href={base_url <> "/towns"}>Towns</a></li>
+      <label>Customer Page</label>
+      <li><a href= {base_url <> "/parcels"}>Parcels</a></li>
+      <li><a href={base_url <> "/travelnotices"}>Travel Notices</a></li>
       <li><a href={base_url <> "/bookings"}>Bookings</a></li>
       <li><a href={base_url <> "/parceldeliverybooking"}>Parcel Delivery Bookings</a></li>
+      <label>Human Resource  Page</label>
       <li><a href={base_url <> "/hrlive"}>hr</a></li>
+      <label>Accountant Page</label>
+      <li><a href={base_url <> "/items"}> Items stored in inventory -- for accountants</a></li>
+      <label>Manager Page</label>
+      <li><a href={base_url <> "/seatplans"}>Seatplans</a></li>
+      <li><a href={base_url <> "/vehicles"}>vehicles</a></li>
+      <li><a href={base_url <> "/towns"}>Towns</a></li>
     </ul>
   </article>
 </section>
